--- a/Assignment/registration.html
+++ b/Assignment/registration.html
@@ -44,17 +44,14 @@
     </script>
 </head>
 <body>
-    <form id="adduser" onsubmit="validata()">
+    <form id="adduser" >
         Name <input type="text" id="username"> <br>
         Password <input type="password" id="pass"> <br>
         Email <input type="text" id="mail"> <br>
         Contact <input type="text" id="phone"> <br>
-        Submit:<input type="submit">
+        Submit:<input type="submit" onclick="validata()">
     </form>
     <div id="printhere"></div>
-        
     
 </body>
 </html>
-
-
